feat: delete chapter, edit video, delete video & refactor code
